# packages/server/src/services/uniswap.ts
@@ -15,6 +15,7 @@ import {
     UniswapSwap,
     UniswapMintOrBurn,
 } from 'types/uniswap';
+import { HTTPError } from 'api/util/errors';
 interface ApolloResponse<T> {
     data: T;
     error?: ApolloError;
@@ -77,12 +78,13 @@ export default class UniswapFetcher {
 
         const { pair } = response?.data;
 
-        if (pair == null) {
+        if (pair == null && response.error) {
             throw new Error(
-                `Could not find pair with ID ${pairId}. Error from response: ${
-                    response.error?.toString() || ''
+                `Could not find pair with ID ${pairId}. Error from response: ${response.error?.toString() || ''
                 }`
             );
+        } else if (pair == null) {
+            throw new HTTPError(404);
         }
 
         const feesUSD = new BigNumber(pair.volumeUSD, 10)
@@ -125,8 +127,7 @@ export default class UniswapFetcher {
 
         if (pairs == null || pairs.length === 0) {
             throw new Error(
-                `Could not fetch top pairs. Error from response: ${
-                    response.error?.toString() || ''
+                `Could not fetch top pairs. Error from response: ${response.error?.toString() || ''
                 }`
             );
         }
@@ -171,8 +172,7 @@ export default class UniswapFetcher {
 
         if (pairs == null || pairs.length === 0) {
             throw new Error(
-                `Could not fetch pairs subject to alerting. Error from response: ${
-                    response.error?.toString() || ''
+                `Could not fetch pairs subject to alerting. Error from response: ${response.error?.toString() || ''
                 }`
             );
         }
@@ -194,8 +194,8 @@ export default class UniswapFetcher {
                             where: {
                                 pairAddress: "${pairId}",
                                 date_gt: ${Math.floor(
-                                    startDate.getTime() / 1000
-                                )}
+                startDate.getTime() / 1000
+            )}
                                 date_lt: ${Math.floor(endDate.getTime() / 1000)}
                             }
                         ) {
@@ -216,8 +216,7 @@ export default class UniswapFetcher {
 
         if (pairDayDatas == null) {
             throw new Error(
-                `Could not fetch daily data for pair ${pairId}. Error from response: ${
-                    response.error?.toString() || ''
+                `Could not fetch daily data for pair ${pairId}. Error from response: ${response.error?.toString() || ''
                 }`
             );
         }
@@ -238,12 +237,11 @@ export default class UniswapFetcher {
                         pairHourDatas(orderBy: hourStartUnix, orderDirection: asc,
                             where: {
                                 pair: "${pairId}",
-                                hourStartUnix_gt: ${
-                                    Math.floor(startDate.getTime() / 1000) - 1
-                                }
+                                hourStartUnix_gt: ${Math.floor(startDate.getTime() / 1000) - 1
+                }
                                 hourStartUnix_lt: ${Math.floor(
-                                    endDate.getTime() / 1000
-                                )}
+                    endDate.getTime() / 1000
+                )}
                             }
                         ) {
                             pair {
@@ -265,8 +263,7 @@ export default class UniswapFetcher {
 
         if (pairHourDatas == null) {
             throw new Error(
-                `Could not fetch daily data for pair ${pairId}. Error from response: ${
-                    response.error?.toString() || ''
+                `Could not fetch daily data for pair ${pairId}. Error from response: ${response.error?.toString() || ''
                 }`
             );
         }
@@ -404,10 +401,11 @@ export default class UniswapFetcher {
 
         if (swaps == null) {
             throw new Error(
-                `Could not fetch recent swaps for pair ${pairId}. Error from response: ${
-                    response.error?.toString() || ''
+                `Could not fetch recent swaps for pair ${pairId}. Error from response: ${response.error?.toString() || ''
                 }`
             );
+        } else if (swaps.length === 0) {
+            throw new HTTPError(404);
         }
 
         return swaps;
@@ -445,8 +443,7 @@ export default class UniswapFetcher {
 
         if (mints == null) {
             throw new Error(
-                `Could not fetch recent mints for pair ${pairId}. Error from response: ${
-                    response.error?.toString() || ''
+                `Could not fetch recent mints for pair ${pairId}. Error from response: ${response.error?.toString() || ''
                 }`
             );
         }
@@ -486,8 +483,7 @@ export default class UniswapFetcher {
 
         if (burns == null) {
             throw new Error(
-                `Could not fetch recent burns for pair ${pairId}. Error from response: ${
-                    response.error?.toString() || ''
+                `Could not fetch recent burns for pair ${pairId}. Error from response: ${response.error?.toString() || ''
                 }`
             );
         }
@@ -514,8 +510,7 @@ export default class UniswapFetcher {
 
         if (ethPrice == null) {
             throw new Error(
-                `Could not fetch ethPrice. Error from response: ${
-                    response.error?.toString() || ''
+                `Could not fetch ethPrice. Error from response: ${response.error?.toString() || ''
                 }`
             );
         }
